<resources>
    <string name="app_name">Food Delivery Project</string>
    <string name="skip">Skip</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">login</string>
    <string name="onboarding_text_first">Order from your favourite \n stores or vendors</string>
    <string name="onboarding_text_second">Choose from a wide range of \n delicious meals</string>
    <string name="onboarding_text_third">Enjoy instant delivery \n and payment</string>
    <string name="welcome_string">Welcome friend, enter your details so lets get started in ordering food</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_with_google">Sign-in with Google</string>
    <string name="login_to_my_account">Login to my account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="welcome_login_string">Good to see you again, enter your details below to continue ordering.</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_button_string">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_home_string">Enjoy Delicious food</string>
    <string name="search">Search</string>
    <string name="your_cart">Your cart</string>
    <string name="process_to_payment">Process to payment</string>
    <string name="total">"Total  "</string>
    <string name="popular_restaurants">Popular restaurants</string>
    <string name="view_all">View all</string>
    <string name="settings">Settings</string>
    <string name="user_name">User name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="update_profile">Update profile</string>
    <string name="restaurant_information">Restaurant\'s Information</string>
    <string name="min_delivery_time">Min Delivery Time</string>
    <string name="min_delivery_fee">Min Delivery Fee</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>

    <string-array name="RestaurantPaymentMethods">
        <item>Online Credit/Bank Card</item>
        <item>Credit Card</item>
        <item>Cash</item>
        <item>Ticket Restaurant</item>
        <item>Sodexo Restaurant Pass</item>
        <item>Multinet</item>
        <item>SetCard</item>
    </string-array>

    <string-array name="Cuisines">
        <item>Seafood</item>
        <item>Burger</item>
        <item>Doner</item>
        <item>Worldwide</item>
        <item>Homemade</item>
        <item>Breakfast</item>
        <item>Kebab</item>
        <item>Meatball</item>
        <item>Pasta - Salad</item>
        <item>Bakery</item>
        <item>Pizza</item>
        <item>Dessert</item>
        <item>Eastern Kitchen</item>
    </string-array>
</resources>