<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="12dp">

    <TextView
        android:id="@+id/restaurant_info_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/restaurant_information"
        android:textColor="@color/medium_black"
        android:textStyle="bold"
        android:layout_marginVertical="6dp"/>

    <TextView
        android:id="@+id/restaurant_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="6dp"/>

    <TextView
        android:id="@+id/restaurant_min_delivery_time_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/min_delivery_time"
        android:textColor="@color/medium_black"
        android:textStyle="bold"
        android:layout_marginVertical="6dp"/>

    <TextView
        android:id="@+id/restaurant_min_delivery_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="6dp"/>

    <TextView
        android:id="@+id/restaurant_min_fee_time_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/min_delivery_fee"
        android:textColor="@color/medium_black"
        android:textStyle="bold"
        android:layout_marginVertical="6dp"/>

    <TextView
        android:id="@+id/restaurant_min_fee_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>